--- a/Runtime/DeepLearningImagePreprocessor.asmdef
+++ b/Runtime/DeepLearningImagePreprocessor.asmdef
@@ -1,5 +1,5 @@
 {
-  "name": "DeepLearningImagePreprocessor",
+  "name": "CJM.DeepLearningImagePreprocessor",
   "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
